// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defineOptions() basic usage 1`] = `
"export default defineComponent({
 name: 'FooApp' ,
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

      
      
return (): any | null => { return null }
}

})"
`;

exports[`defineOptions() empty argument 1`] = `
"export default defineComponent({
  setup(__props): any | null {
const __ins = getCurrentInstance()!;
const _ctx = __ins.proxy;
const _cache = __ins.renderCache;

      
      
return (): any | null => { return null }
}

})"
`;
